# JetsonTranscription

./: AudioDeviceSelector.qml  AudioDeviceSelector.qmlc  BackButton.qml  BackButton.qmlc  CMakeLists.txt  CustomGrid.qml  CustomGrid.qmlc  DebugBox.qml  GridBlock.qml  GridBlock.qmlc  IterationSelector.qml  IterationSelector.qmlc  Keyboard.qml  Keyboard.qmlc  KeyboardNote.qml  KeyboardNote.qmlc  Main.qml  Main.qmlc  MainMenu.qml  MainMenu.qmlc  README.md  activation_postprocessing.c  activation_postprocessing.h  activations.c  activations.h  dictionary.c  dictionary.h  domain_adaptation.c  domain_adaptation.h  dynamicarray.c  dynamicarray.h  evaluation.c  evaluation.h  full_transcription.c  full_transcription.h  main.cpp
images/: AudioDeviceSelector.qml  BackButton.qml  Main.qml  MainMenu.qml  RecordingScreen.qml  SongLoadingScreen.qml
